# TCAA_RUS

./: .envrc  .gitattributes  .gitignore  .gitmodules  .lfsconfig  devenv.nix  devenv.yaml  flake.nix  justfile  pyproject.toml  readme.md  tutorials.md  使用说明.md  奥术律师-攻略.txt
.github/ISSUE_TEMPLATE/: reproduction.md
.github/workflows/: backup_paratranz.yml  paratranz-openapi.json  sync_paratranz.yml
Fonts/: .gitignore  README.md  check_fonts.py  chinese.txt  gen_fonts.py  orig-font-missing-report.json
Fonts/@build/: sharedassets0.assets.resS
Fonts/@new/: OpenSans-Regular Atlas Material-sharedassets0.assets-2.json  OpenSans-Regular Atlas Material-sharedassets0.assets-3.json  OpenSans-Regular Atlas Material-sharedassets0.assets-4.json  OpenSans-Regular Atlas Material-sharedassets0.assets-5.json  OpenSans-Regular Atlas Material-sharedassets0.assets-6.json  OpenSans-Regular Atlas Material-sharedassets0.assets-7.json  OpenSans-Regular SDF Atlas-sharedassets0.assets-3.json  OpenSans-Regular SDF Atlas-sharedassets0.assets-6.json  (+14 more)
Images/: mapping.md
Texts/: chinese.txt  get_chars.py  m_text.txt  raw2paratranz.py  readme.md  text_io.py
Video/: README.md
launcher/: .gitignore  justfile  stringliteral.json  xmake.lua
samples/: Case 1-sharedassets0.assets-154.json  case1.txt
scripts/: .gitignore  downParatranz.py  dump_insts.py  extraceCaseYarnBinary.py  extractCaseYarnBinary.py  patchMetaData.py
third/: .gitignore  Rus Letters.txt  base.txt  charset_orig.txt  chinese.txt  controller.txt  il2cppdumper-TCAA.7z  japanese.txt  japanese2.txt  通用规范汉字表.txt
(+2509 files in other folders)
